src/test/deca/context/invalid/expr_cast_int_to_boolean.deca
// Test de la règle (3.39) : on ne peut pas cast de int vers boolean.
{
	boolean var1;
	int var2;
	var1 = (boolean)(var2);
}

// Résultat :
//# a
